OMW-4: Integrate vertical scrollbar, fix header row, make rowData an observable
WIP.

--- a/angular-standalone/src/launch-list/launch-list.component.scss
+++ b/angular-standalone/src/launch-list/launch-list.component.scss
@@ -1,3 +1,41 @@
+#yyy {
+  // height: 200px;
+  // max-height: 200px;
+  // background-color: lawngreen;
+}
+
 #xxx {
-  height: '90vh';
+  // max-width: 150;
+  // height: calc(100vh - (21px + 96px + 106px + 100px));
+  // max-height: 500px;
+  // height: 50vh;
+  // max-height:80vh;
+  // overflow: scroll;
+}
+
+// ::-webkit-scrollbar {
+//   width: 20;  /* remove scrollbar space */
+//   background: transparent;  /* optional: just make scrollbar invisible */
+// }
+
+:host {
+  ::ng-deep .ag-header-cell {
+    // margin: 0 8px;
+    // padding: 0 8px;
+    // background-color: aquamarine;
+  }
+
+  ::ng-deep .ag-header-cell-text {
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    overflow: clip;
+    // padding-right: 15px;
+    // max-width: 180px;
+  }
+
+  ::ng-deep .ag-cell-value {
+    // margin: 0 8px;
+    // background-color: aquamarine;
+  }
 }
