--- a/angular-standalone/src/main.css
+++ b/angular-standalone/src/main.css
@@ -376,6 +376,7 @@ ag-grid, ag-grid-angular, ag-grid-ng2, ag-grid-polymer, ag-grid-aurelia {
 }
 
 .ag-header-cell-text {
+  color: blue;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
